# PixelDome

./: CMakeLists.txt  README.md
Assets/Config/: Path.json  Player.json  Projection.json  Tile.json  Window.json
Assets/Data/: Quad.json
Assets/Levels/: Room.json  Scene.json
Assets/Shaders/: Basic.frag  Basic.vert  Water.frag
Source/Base/: Game.cpp  Game.hpp  Main.cpp  State.cpp  State.hpp
Source/Debug/: DebugGui.cpp  DebugGui.hpp  Editor.cpp  Editor.hpp
Source/Entity/: Player.cpp  Player.hpp  Tile.cpp  Tile.hpp
Source/Graphics/: Camera.cpp  Camera.hpp  GLContext.cpp  GLContext.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp
Source/Gui/: ImguiManager.cpp  ImguiManager.hpp
Source/Map/: Level.cpp  Level.hpp
Source/Util/: JsonLoader.cpp  JsonLoader.hpp
